<resources>
    <string name="app_name">日麻Saki</string>
    <string name="app_advertisement">麻雀って、楽しいね</string>
    <string name="app_title">清澄高校麻雀部</string>
    <string name="power_by">Powered by Summer Studio</string>
  	<string name="about">关于</string>
  	<string name="version">Version %s</string>
  	<string name="copyright">Copyright © 2019-2023 Summer Studio.\nAll Rights Reserved.</string>
    <string name="select_text">请选择麻将种类</string>
    <string name="mahjong_japanese">日本麻将</string>
    <string name="mahjong_international">国际麻将</string>
    <string name="mahjang_cantonese">广东麻将</string>
    <string name="mahjong_taiwan">台湾麻将</string>
    <string name="no_support">功能暂不支持！</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="start_game">开始游戏</string>
    <string name="guide_setting">设置导向</string>
    <string name="east">东</string>
    <string name="west">西</string>
    <string name="south">南</string>
    <string name="north">北</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="ju">局</string>
    <string name="round">本场</string>
    <string name="dora">宝牌</string>
    <string name="dora_in">里宝牌</string>
    <string name="dora_red">赤宝牌</string>
    <string name="battle_count">局数</string>
    <string name="battle_one">东风战</string>
    <string name="battle_two">半庄战</string>
    <string name="battle_three">西风战</string>
    <string name="battle_four">全庄战</string>
    <string name="member_count">人数</string>
    <string name="base_point">基础分</string>
    <string name="create">新增</string>
    <string name="new_player">新玩家</string>
    <string name="name">姓名</string>
    <string name="nick_name">昵称</string>
    <string name="sex">性别</string>
    <string name="sign">签名</string>
    <string name="address">地址</string>
    <string name="note">备注</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="please_choose_player">请选择玩家</string>
    <string name="tip">提示</string>
    <string name="please_input_id">请输入ID！</string>
    <string name="please_input_name">请输入姓名！</string>
    <string name="please_input_nickname">请输入昵称！</string>
    <string name="please_input_sign">请输入个性签名！</string>
    <string name="please_choose_sex">请选择性别</string>
    <string name="is_cancel_player">是否取消玩家？</string>
    <string name="dealer">庄家</string>
    <string name="player">闲家</string>
    <string name="ground_wind_">场风：</string>
    <string name="self_wind_">自风：</string>
    <string name="lizhibang">立直棒</string>
    <string name="rollcount">本场数</string>
    <string name="first_round">一巡无鸣</string>
    <string name="final_pick">海(河)底</string>
    <string name="lizhi">立直</string>
    <string name="double_lizhi">双立直</string>
    <string name="zimo">自摸</string>
    <string name="yifa">一发</string>
    <string name="duanyaojiu">断幺九</string>
    <string name="windground">场风</string>
    <string name="windself">自风</string>
    <string name="dragon_haku">白</string>
    <string name="dragon_green">發</string>
    <string name="dragon_chun">中</string>
    <string name="PingHe">平和</string>
    <string name="YiBeiKou">一杯口</string>
    <string name="QiangKong">抢杠</string>
    <string name="LingShangKaiHua">岭上开花</string>
    <string name="HaiDiLaoYue">海底捞月</string>
    <string name="HeDiMoYu">河底摸鱼</string>
    <string name="ShiErLuoTai">十二落抬</string>
    <string name="QiDuiZi">七对子</string>
    <string name="HunQuanDaiYao">混全带幺</string>
    <string name="YiQiTongGuan">一气通贯</string>
    <string name="SanSeTongShun">三色同顺</string>
    <string name="SanSeTongKe">三色同刻</string>
    <string name="SanGangZi">三杠子</string>
    <string name="DuiDuiHe">对对和</string>
    <string name="SanAnKe">三暗刻</string>
    <string name="XiaoSanYuan">小三元</string>
    <string name="HunLaoTou">混老头</string>
    <string name="SanLianKe">三连刻</string>
    <string name="SanSeTongGuan">三色通貫</string>
    <string name="SanSeLianKe">三色连刻</string>
    <string name="JingTongHe">镜同和</string>
    <string name="ErTongKe">二同刻</string>
    <string name="SanSeShuangLongHui">三色双龙会</string>
    <string name="ErBeiKou">二杯口</string>
    <string name="ChunQuanDaiYaoJiu">纯全带幺九</string>
    <string name="HunYiSe">混一色</string>
    <string name="QingYiSe">清一色</string>
    <string name="LiuJuManGuan">流局满贯</string>
    <string name="TianHe">天和</string>
    <string name="DiHe">地和</string>
    <string name="GuoShiWuShuang">国士无双</string>
    <string name="JiuLianBaoDeng">九莲宝灯</string>
    <string name="SiAnKe">四暗刻</string>
    <string name="DaSanYuan">大三元</string>
    <string name="SiGangZi">四杠子</string>
    <string name="LvYiSe">绿一色</string>
    <string name="ZiYiSe">字一色</string>
    <string name="QingLaoTou">清老头</string>
    <string name="XiaoSiXi">小四喜</string>
    <string name="RenHe">人和</string>
    <string name="DaCheLun">大车轮</string>
    <string name="DaZhuLin">大竹林</string>
    <string name="DaShuLin">大数隣</string>
    <string name="BaLianZhuang">八连庄</string>
    <string name="SiAnKe_Single">四暗刻单骑</string>
    <string name="GuoShiWuShuang_Thirteen">国士无双十三面</string>
    <string name="JiuLianBaoDeng_Pure">纯正九莲宝灯</string>
    <string name="DaSiXi">大四喜</string>
    <string name="DaQiXing">大七星</string>
    <string name="SiFengLianDa">四风连打</string>
    <string name="SiGangSanLe">四杠散了</string>
    <string name="JiuPaiJiuZhong">九牌九种</string>
    <string name="SiJiaLiZhi">四家立直</string>
    <string name="SanJiaHeLiao">三家和了</string>
    <string name="triplet">刻子</string>
    <string name="sequence">顺子</string>
    <string name="addition_kong">加杠</string>
    <string name="exposed_kong">大明杠</string>
    <string name="concealed_kong">暗杠</string>
    <string name="please_choose_type">请选择类型</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
	<string name="fan_one">一番</string>
	<string name="fan_two">二番</string>
	<string name="fan_three">三番</string>
	<string name="fan_six">六番</string>
	<string name="fan_manguan">满贯</string>
	<string name="fan_yiman">役满</string>
	<string name="fan_yiman_double">双倍役满</string>
	<string name="fan_leave">流局</string>
	<string name="input_invalid">输入非法！</string>
	<string name="input_id_exist">此ID已存在！</string>
	<string name="battle_entrance">对战入口</string>
	<string name="battle_record">历史战绩</string>
	<string name="score_calculator">计分器</string>
	<string name="ranking_list">排行榜</string>
	<string name="player_manage">玩家管理</string>
	<string name="wlan_battle">局域网PK</string>
	<string name="fan_type">役种</string>
	<string name="point_form">数表</string>
	<string name="reset">重置</string>
	<string name="export">导出</string>
	<string name="search">搜索</string>
	<string name="please_input_name_nickname">请输入姓名或昵称</string>
	<string name="name_unfound">地球上无此人！</string>
	<string name="ensure_delete_player">确定要消灭此人吗？\n玩家：%s</string>
	<string name="delete_fail">消灭任务失败，请求总部支援！</string>
	<string name="head_select">用户头像</string>
	<string name="preview">预览</string>
	<string name="animal_square">动物心方方</string>
	<string name="mahjong_soul">雀魂</string>
	<string name="total_count">共%d张</string>
	<string name="please_choose_one">年纪轻轻就眼花，给我选一个</string>
	<string name="pc">电脑</string>
	<string name="setting">设置</string>
	<string name="exit">退出</string>
	<string name="history">历史</string>
	<string name="dora_size_not_match">宝牌指示牌数量不一致，请检查！</string>
	<string name="please_release_blank_card">插入失败，请空出至少三张牌！</string>
	<string name="huangpailiuju">荒牌流局</string>
	<string name="zhongtuliuju">中途流局</string>
	<string name="please_choose_type_liuju">请选择流局类型</string>
	<string name="please_ensure_tingpai_player">请确认听牌玩家</string>
	<string name="please_choose_manguan_player">请选择流局满贯玩家</string>
	<string name="please_choose_gang_player">请选择杠牌玩家</string>
	<string name="please_choose_jpjz_player">请选择九牌九种玩家</string>
	<string name="please_ensure_lizhi_player">请确认立直玩家</string>
	<string name="please_choose_wind">请选择连打的风牌</string>
	<string name="please_choose_hele_player">请选择和牌的玩家</string>
	<string name="is_dealer_tingpai">庄家是否听牌</string>
	<string name="tingpai">听牌</string>
	<string name="ronghe">荣和</string>
	<string name="bomb">放铳</string>
	<string name="revoke">撤销</string>
	<string name="help">帮助</string>
	<string name="baopai">包牌</string>
	<string name="mode">模式</string>
	<string name="novice">萌新</string>
	<string name="expert">老司机</string>
	<string name="count_fan">番数</string>
	<string name="count_fu">符数</string>
	<string name="upper">上家</string>
	<string name="downer">下家</string>
	<string name="oppositer">对家</string>
	<string name="player_bomb_no_choose">未选择放铳玩家</string>
	<string name="player_ronghe_no_choose">未选择荣和玩家</string>
	<string name="rollcount_plus_one">本场数+1</string>
	<string name="please_select_fan">请选择番数</string>
	<string name="please_select_fu">请选择符数</string>
	<string name="click_to_select">点击选择</string>
	<string name="lizhi_fail">立直失败！\n凑够钱再来吧...</string>
	<string name="FanFu">本场番缚</string>
	<string name="FanFu_content">累计五本场二番缚，九本场三番缚如此类推，每超过四本场增加一番缚（一发、河底等偶然役不算，即二番缚下，仅立直、 一发和仅立直、河底时不能荣和，*自摸不算偶然役）</string>
	<string name="BaLianZhuang_content">亲家无流局连庄8次则在八本场之后按照自摸役满计算</string>
	<string name="revoke_fail">啥都没做就想撤？赶紧开局！</string>
	<string name="please_choose_only_one">请选择其中一个！</string>
	<string name="please_choose_at_least_one">请选择至少一个！</string>
	<string name="please_choose_at_least_two">请选择至少两个！</string>
	<string name="please_choose_only_three">请选择其中三个！</string>
	<string name="please_back_to_lizhi">请在主界面选择玩家立直！</string>
	<string name="ensure_revoke_last_round">确定撤回到上一局？</string>
	<string name="player_baopai">包牌玩家</string>
	<string name="player_yiman">役满玩家</string>
	<string name="player_fly_game_end">检测到有玩家被击飞，是否直接终局？</string>
	<string name="game_end">游戏结束，是否直接终局？</string>
	<string name="move_up_game_end">是否提前终局？</string>
	<string name="enter_south_or_west">南/西入</string>
	<string name="enter_south_or_west_content">若在东风战东四局完（或半庄战南四局完）后，所有玩家的分值均少于初始分+5000，则需进入南风局（或西风局）继续对战，一旦有玩家分数达标，或四人轮庄后仍无人达标，则直接终局；</string>
	<string name="fan">番</string>
	<string name="fu">符</string>
	<string name="yiman_times">倍役满</string>
	<string name="tiaoman">跳满</string>
	<string name="beiman">倍满</string>
	<string name="sanbeiman">三倍满</string>
	<string name="accumulate_yiman">累计役满</string>
	<string name="accumulate_yiman_times">倍累计役满</string>
	<string name="lizhi_belong_to">立直归属</string>
	<string name="lizhi_belong_to_content">一炮双响/三响时，场上所有立直棒（本场数）的归逆时针顺序离选择的玩家最近者所有</string>
	<string name="special_yaku">特殊役</string>
	<string name="fanfu_wrong">输入番数有误，请勿蒙混过关！</string>
	<string name="fanfu_invalid">当前处于%1$d番缚，有效番数为%2$d，胡牌不能！</string>
	<string name="final_rank">最终排名</string>
	<string name="ma_point">马点</string>
	<string name="total_not_zore">总和不为0</string>
	<string name="start_time">开始时间</string>
	<string name="end_time">结束时间</string>
	<string name="rank1">1位：</string>
	<string name="rank2">2位：</string>
	<string name="rank3">3位：</string>
	<string name="rank4">4位：</string>
	<string name="point">点数：</string>
	<string name="detail_log">战绩详情</string>
	<string name="cost_time">耗时</string>
	<string name="year">年</string>
	<string name="month">月</string>
	<string name="day">天</string>
	<string name="hour">时</string>
	<string name="minute">分</string>
	<string name="second">秒</string>
	<string name="please_select_time">请选择时间</string>
	<string name="date">日期</string>
	<string name="interrupt_save_temp">临时中断</string>
	<string name="end_game_save_db">直接终局</string>
	<string name="exit_give_up_data">忍心放弃</string>
	<string name="import_from_excel">从Excel导入数据</string>
	<string name="view_detail">查看详情</string>
  	<string name="change_main_vision">切换主视觉</string>
  	<string name="enable_audio">启用音效</string>
  	<string name="switch_on">开</string>
  	<string name="change_score">分数调整</string>
  	<string name="title">标题</string>
	<string name="please_select">请选择</string>
	<string name="file_all">手机存储</string>
	<string name="file_music_history">历史音频</string>
</resources>