<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_select"
        android:padding="10dp"
        android:textColor="@color/light_blacktext"
        android:textSize="16sp" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView 
            android:id="@+id/dropdown_file_music_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_music_history"
            android:textColor="@color/light_blacktext"
            android:textSize="14sp"
            android:drawableTop="@drawable/file_music_history"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:gravity="center" />
        
        
        <TextView 
            android:id="@+id/dropdown_file_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_all"
            android:textColor="@color/light_blacktext"
            android:textSize="14sp"
            android:drawableTop="@drawable/file_all"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:gravity="center" />
        
    </LinearLayout>

</LinearLayout>
