<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <TextView
        android:id="@+id/help_calculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/score_calculator"
        android:textColor="@color/light_blacktext"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_listview"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/diver_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <TextView
        android:id="@+id/help_main_vision"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_main_vision"
        android:textColor="@color/light_blacktext"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_listview"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/diver_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <LinearLayout
        android:id="@+id/help_audio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <TextView
	        android:layout_width="0dp"
	        android:layout_weight="3"
	        android:layout_height="wrap_content"
	        android:text="@string/enable_audio"
	        android:textColor="@color/light_blacktext"
	        android:textSize="18sp"
	        android:gravity="center_vertical|left"
	        android:background="@drawable/selector_listview"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="10dp" />
        
        <TextView
            android:id="@+id/help_audio_switch"
	        android:layout_width="0dp"
	        android:layout_weight="1"
	        android:layout_height="wrap_content"
	        android:text="@string/switch_on"
	        android:textColor="@color/light_blacktext"
	        android:textSize="18sp"
	        android:gravity="center_vertical|right"
	        android:background="@drawable/selector_listview"
	        android:paddingTop="5dp"
	        android:paddingBottom="5dp"
	        android:paddingLeft="10dp"
	        android:paddingRight="20dp" />
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/diver_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <TextView
        android:id="@+id/help_change_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_score"
        android:textColor="@color/light_blacktext"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_listview"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/diver_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" />
    
    <TextView
        android:id="@+id/help_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:textColor="@color/light_blacktext"
        android:textSize="18sp"
        android:gravity="center_vertical"
        android:background="@drawable/selector_listview"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    

</LinearLayout>
